--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 body {
-  background: url(milkyWay.jpg) no-repeat center center fixed;
-  -webkit-background: cover;
-  -moz-background: cover;
-  -o-background: cover;
-  background: cover;
+  background: url("milkyWay.jpg") no-repeat top center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
 }
